--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
     "runtime": "nodejs20"
   },
   "hosting": {
-    "public": "frontend",
+    "public": "frontend/dist",
     "rewrites": [{"source": "**", "destination": "/index.html"}]
   }
 }
